// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonForm component Should render ButtonForm component when is loading 1`] = `
<Fragment>
  <button
    className="form-control btn btn-primary"
    disabled={true}
  >
    Logging in
    ...
  </button>
</Fragment>
`;

exports[`ButtonForm component Should render ButtonForm component when is not loading 1`] = `
<Fragment>
  <button
    className="form-control btn btn-primary"
    type="submit"
  >
    Log in
  </button>
</Fragment>
`;
